logs/esbackup.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/esbackup'...
Compiling './lib/python3.5/site-packages/esbackup/backup.py'...
***   File "./lib/python3.5/site-packages/esbackup/backup.py", line 156
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/esbackup/config.py'...
***   File "./lib/python3.5/site-packages/esbackup/config.py", line 34
    print "usage: %s [-h] [--config config_file] [task [task ...]]" % sys.argv[0]
                                                                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/esbackup/contrib'...
Listing './lib/python3.5/site-packages/esbackup/contrib/gnupg'...
Compiling './lib/python3.5/site-packages/esbackup/contrib/gnupg/GnuPGInterface.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (GnuPGInterface.py, line 277)
Listing './lib/python3.5/site-packages/esbackup/plugins'...
Compiling './lib/python3.5/site-packages/esbackup/plugins/gpg.py'...
***   File "./lib/python3.5/site-packages/esbackup/plugins/gpg.py", line 33
    except (OSError, IOError), err:
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/esbackup/sample'...
Compiling './lib/python3.5/site-packages/esbackup/utils.py'...
***   File "./lib/python3.5/site-packages/esbackup/utils.py", line 31
    except OSError, ex:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/esbackup-0.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
